--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "NDYzMDQ0NTY4ODQ2MzAzMjcy.Dhq7bg.rmy3PWFsvW35njCnyUmC7dKpOUE",
+	"token": "NDYzNjgzNDE3NjUzOTAzMzcw.Dhz-XA.Zo6I56DRs0cpI7JUgiHH8ZyoWFE",
 	"servers": [
 		"383179430639435788"
 	],
